# ipi-2026-31-devexp-devops-todolist

./: README.md  pyproject.toml
src/todolist/: controller.py  main.py  repository.py  schemas.py  service.py
